# ServerStatMonitoring

./: LICENSE  README-RU  README.md
app_win_x86_64/templates/: index.html.tera
rust_server_info/: Cargo.toml
rust_server_info/src/: main.rs
rust_server_info/templates/: index.html.tera
