[package]
name = "rust_server_info"
version = "0.0.1"
authors = ["Kerimiy"]
description = "ServerStatMonitoring"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
sysinfo = "0.37.2"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
